Composite pattern implemented for function and tests added