@@ -2,6 +2,7 @@ package edu.austral.ingsis.math;
 
 import org.junit.Test;
 
+import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
 
@@ -17,7 +18,9 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction1() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Variable(1d), List.of(Operand.ADD), new Variable(6d));
+        final List<String> result = function.getVariables();
+
 
         assertThat(result, empty());
     }
@@ -27,7 +30,9 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction2() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Variable(12d), List.of(Operand.DIVIDE), new Variable("div", 4d));
+        final List<String> result = function.getVariables();
+
 
         assertThat(result, containsInAnyOrder("div"));
     }
@@ -37,7 +42,8 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction3() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Expression(new Variable(9d), List.of(Operand.DIVIDE), new Variable("x", 3d)), List.of(Operand.MULTIPLY), new Variable("y", 4d));
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("x", "y"));
     }
@@ -47,7 +53,8 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction4() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Expression(new Variable(27d), List.of(Operand.DIVIDE), new Variable("a", 9d)), List.of(Operand.POWER), new Variable("b", 3d));
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("a", "b"));
     }
@@ -57,7 +64,8 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction5() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Variable("z", 36d), List.of(Operand.POWER),new Expression(new Variable(1d), List.of(Operand.DIVIDE), new Variable( 2d)));
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("z"));
     }
@@ -67,7 +75,14 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction6() {
-        final List<String> result = Collections.emptyList();
+        Function function = null;
+        try {
+            function = new Expression(new Variable("value", 8d, Operand.ABSOLUTE), List.of(Operand.SUBTRACT), new Variable(8d));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        assert function != null;
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("value"));
     }
@@ -77,7 +92,14 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction7() {
-        final List<String> result = Collections.emptyList();
+        Function function = null;
+        try {
+            function = new Expression(new Variable("value", 8d, Operand.ABSOLUTE), List.of(Operand.SUBTRACT), new Variable(8d));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        assert function != null;
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("value"));
     }
@@ -87,7 +109,8 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction8() {
-        final List<String> result = Collections.emptyList();
+        Function function = new Expression(new Expression(new Variable(5d), List.of(Operand.SUBTRACT), new Variable("i", 2d)), List.of(Operand.MULTIPLY), new Variable(8d));
+        final List<String> result = function.getVariables();
 
         assertThat(result, containsInAnyOrder("i"));
     }
